--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ matrix:
       env: DJANGO=2.1.*
     - python: 3.5
       env: DJANGO=2.2.*
+    - python: 3.5
+      env: DJANGO=3.0.*
+    - python: 3.5
+      env: DJANGO=3.1.*
 
     - python: 3.6
       env: DJANGO=1.10.*
@@ -34,6 +38,10 @@ matrix:
       env: DJANGO=2.1.*
     - python: 3.6
       env: DJANGO=2.2.*
+    - python: 3.6
+      env: DJANGO=3.0.*
+    - python: 3.6
+      env: DJANGO=3.1.*
 
     - python: 3.7
       env: DJANGO=1.10.*
@@ -45,10 +53,14 @@ matrix:
       env: DJANGO=2.1.*
     - python: 3.7
       env: DJANGO=2.2.*
+    - python: 3.7
+      env: DJANGO=3.0.*
+    - python: 3.7
+      env: DJANGO=3.1.*
 
     - os: osx
       language: generic
-      env: DJANGO=1.10.*
+      env: DJANGO=3.1.*
 
 # Perform the manual steps on OSX to install Python3 and activate venv:
 # Since Python versions have been tested on Linux and it is only a matter of
