fix: issue newline #30, implement black, add exclude pattern, etc.

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,11 @@ universal = 1
 
 [metadata]
 description-file = README.rst
+
+[flake8]
+ignore = E402,E501,W503,W504,E731,E741
+exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,.vscode
+
+[pycodestyle]
+max-line-length = 120
+exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules
